# music-assistant-server

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Dockerfile.base  README.md  SECURITY.md  SETUP.md  pyproject.toml  requirements_all.txt
.claude/skills/review-pr/: REVIEW_STANDARDS.md  SKILL.md
.github/: FUNDING.yml  copilot-instructions.md  release-notes-config.yml
.github/actions/generate-release-notes/: README.md  action.yml  generate_notes.py
.github/instructions/: REVIEW.instructions.md
.github/workflows/: RELEASE_NOTES_GENERATION.md  RELEASE_WORKFLOW_GUIDE.md  auto-merge-dependency-updates.yml  auto-release.yml  backport-to-stable.yml  build-base-image.yml  dependency-approval-command.yml  dependency-security.yml  opencode.yml  pr-labels.yaml  release.yml  test.yml
music_assistant/: __init__.py  __main__.py  constants.py  mass.py
music_assistant/controllers/: cache.py  config.py  metadata.py  music.py  player_queues.py  players.py  streams.py  webserver.py
music_assistant/controllers/audio_analysis/: __init__.py  audio_analysis_controller.py  mel_spectrogram.py
music_assistant/controllers/media/: albums.py  artists.py  audiobooks.py  base.py  genres.py  playlists.py  podcasts.py  radio.py  tracks.py
music_assistant/controllers/players/: README.md  __init__.py  controller.py  helpers.py  player_controller.py  protocol_linking.py  sync_groups.py
music_assistant/controllers/streams/: __init__.py  streams_controller.py
music_assistant/controllers/webserver/: README.md  __init__.py  api_docs.py  auth.py  controller.py  sendspin_proxy.py  websocket_client.py
music_assistant/helpers/: aiohttp_client.py  api.py  api_docs.py  app_vars.py  audio.py  audio_buffer.py  auth.py  buffered_generator.py  compare.py  database.py  dsp.py  ffmpeg.py  hls.py  images.py  json.py  jwt_auth.py  logging.py  named_pipe.py  pcm.py  permissions.py  playlists.py  podcast_parsers.py  process.py  redirect_validation.py  scrobbler.py  security.py  ssl.py  tags.py  throttle_retry.py  upnp.py  uri.py  util.py  webrtc_certificate.py  webserver.py
music_assistant/helpers/resources/: api_docs.html  commands_reference.html  common.css  error.html  login.html  oauth_callback.html  schemas_reference.html  setup.html  swagger_ui.html
music_assistant/models/: __init__.py  audio_analysis_provider.py  core_controller.py  metadata_provider.py  music_provider.py  player.py  player_provider.py  plugin.py  provider.py  smart_fades.py
music_assistant/providers/_demo_audio_analysis_provider/: __init__.py  manifest.json
music_assistant/providers/_demo_music_provider/: __init__.py  manifest.json
music_assistant/providers/_demo_player_provider/: __init__.py  constants.py  manifest.json  player.py  provider.py
music_assistant/providers/_demo_plugin_provider/: __init__.py  manifest.json
music_assistant/providers/_template_music_provider/: __init__.py
music_assistant/providers/airplay/: README.md  __init__.py  constants.py  helpers.py  manifest.json  pairing.py  player.py  provider.py  raop.py  sendspin_bridge.py  stream_session.py
music_assistant/providers/airplay_receiver/: __init__.py  helpers.py  manifest.json  metadata.py
music_assistant/providers/alexa/: __init__.py  manifest.json
music_assistant/providers/apple_music/: __init__.py  manifest.json
music_assistant/providers/ard_audiothek/: __init__.py  database_queries.py  manifest.json
music_assistant/providers/ariacast_receiver/: __init__.py  helpers.py  manifest.json
music_assistant/providers/audible/: __init__.py  audible_helper.py  manifest.json
music_assistant/providers/audiobookshelf/: __init__.py  constants.py  helpers.py  manifest.json  parsers.py
music_assistant/providers/bandcamp/: __init__.py  converters.py  manifest.json
music_assistant/providers/bbc_sounds/: __init__.py  adaptor.py  manifest.json
music_assistant/providers/bluesound/: __init__.py  const.py  manifest.json  player.py  provider.py
music_assistant/providers/builtin/: __init__.py  constants.py  manifest.json
music_assistant/providers/builtin_player/: __init__.py  manifest.json  player.py  provider.py
music_assistant/providers/chromecast/: __init__.py  constants.py  helpers.py  manifest.json  player.py  provider.py  sendspin_bridge.py
music_assistant/providers/dashie_kiosk/: __init__.py  client.py  constants.py  manifest.json  player.py  provider.py
music_assistant/providers/deezer/: __init__.py  gw_client.py  manifest.json
music_assistant/providers/digitally_incorporated/: __init__.py  manifest.json
music_assistant/providers/dlna/: __init__.py  constants.py  helpers.py  manifest.json  player.py  provider.py
music_assistant/providers/emby/: __init__.py  const.py  manifest.json  parsers.py
music_assistant/providers/fanarttv/: __init__.py  manifest.json
music_assistant/providers/filesystem_local/: __init__.py  constants.py  helpers.py  manifest.json
music_assistant/providers/filesystem_smb/: __init__.py  manifest.json
music_assistant/providers/fully_kiosk/: __init__.py  manifest.json  player.py  provider.py
music_assistant/providers/genius_lyrics/: __init__.py  helpers.py  manifest.json
music_assistant/providers/gpodder/: __init__.py  manifest.json
music_assistant/providers/hass/: __init__.py  constants.py  manifest.json
music_assistant/providers/hass_players/: __init__.py  constants.py  (+4 more)
scripts/: check_package_safety.py  example.py  gen_requirements_all.py  parse_manifest_deps.py  profiler.py  setup.sh
tests/: common.py  conftest.py  test_library_sync.py  test_remote_access.py  test_webserver_auth.py
tests/core/: test_cache_controller.py  test_compare.py  test_config_entries.py  test_genre_helpers.py  test_genres.py  test_helpers.py  test_hls.py  test_parse_value_type.py  test_permissions.py  test_player_controller.py  test_player_grouping.py  test_playlists.py  test_protocol_linking.py  test_scrobbler.py  test_tags.py
tests/fixtures/: MultipleArtists.flac  MyArtist - MyTitle.m4a  MyArtist - MyTitle.wv
tests/providers/: __init__.py  test_audible.py  test_tagplayer.py
(+421 files in other folders)
