[project]
name = "music_assistant"
# The version is set by GH action on release
authors = [
  {name = "The Music Assistant Authors", email = "marcelveldt@users.noreply.github.com"},
]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "aiodns>=3.2.0",
  # Pin pycares to 4.11.0 until aiodns is updated to support pycares 5.0 API changes
  # pycares 5.0.0 (released 2025-12-10) has breaking changes incompatible with current aiodns
  "pycares==4.11.0",
  "aiohttp_asyncmdnsresolver==0.1.1",
  "Brotli>=1.0.9",
  "aiohttp==3.13.3",
  "aiohttp-fast-zlib==0.3.0",
  "aiofiles==24.1.0",
  "aiorun==2025.1.1",
  "aiosqlite==0.22.1",
  "awesomeversion>=24.6.0",
  "certifi==2025.11.12",
  "colorlog==6.10.1",
  "cryptography==46.0.3",
  "chardet>=5.2.0",
  "ifaddr==0.2.0",
  "getmac==0.9.5",
  "mashumaro==3.17",
  "music-assistant-frontend==2.17.66",
  "music-assistant-models==1.1.88",
  "mutagen==1.47.0",
  "orjson==3.11.5",
  "pillow==12.0.0",
  "podcastparser==0.6.11",
  "propcache>=0.2.1",
  "python-slugify==8.0.4",
  "unidecode==1.4.0",
  "xmltodict==1.0.2",
  "shortuuid==1.0.13",
  "zeroconf==0.148.0",
  "uv>=0.8.0",
  "librosa==0.11.0",
  "gql[all]==4.0.0",
  "aiovban>=0.6.3",
  "aiortc>=1.6.0",
]
description = "Music Assistant"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.0"

[project.optional-dependencies]
test = [
  "codespell==2.4.1",
  "mypy==1.19.1",
  "pre-commit==4.5.0",
  "pre-commit-hooks==6.0.0",
  "pytest==9.0.2",
  "pytest-aiohttp==1.1.0",
  "pytest-cov==7.0.0",
  "syrupy==5.0.0",
  "tomli==2.3.0",
  "ruff==0.14.9",
]

[project.scripts]
mass = "music_assistant.__main__:main"

[tool.codespell]
# explicit is misspelled in the iTunes API
# "additionals" is a fixed field name from the Nicovideo API fixtures
ignore-words-list = "provid,hass,followings,childs,explict,additionals,commitish,"
skip = """*.js,*.svg,\
music_assistant/providers/itunes_podcasts/itunes_country_codes.json,\
"""

[tool.setuptools]
include-package-data = true
packages = ["music_assistant"]
platforms = ["any"]
zip-safe = false

[tool.setuptools.package-data]
music_assistant = ["py.typed"]

[tool.ruff]
fix = true
show-fixes = true

line-length = 100
target-version = "py312"

[tool.ruff.lint.pydocstyle]
# Use Sphinx-style docstrings with :param: syntax
# pep257 is the base convention, we enforce Sphinx-style parameters separately
convention = "pep257"

[tool.ruff.lint.pylint]

max-args = 10
max-branches = 25
max-returns = 15
max-statements = 50

[tool.mypy]
platform = "linux"
python_version = "3.12"

# set this to normal when we have fixed all exclusions
follow_imports = "silent"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disable_error_code = [
  "annotation-unchecked",
  "import-not-found",
  "import-untyped",
]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
enable_error_code = [
  "ignore-without-code",
  "redundant-self",
  "truthy-iterable",
]
exclude = [
  '^music_assistant/controllers/music.py$',
  '^music_assistant/helpers/app_vars.py',
  '^music_assistant/providers/apple_music/.*$',
  '^music_assistant/providers/bluesound/.*$',
  '^music_assistant/providers/chromecast/.*$',
  '^music_assistant/providers/sonos/.*$',
  '^music_assistant/providers/ytmusic/.*$',
]
extra_checks = false
local_partial_types = true
no_implicit_optional = true
no_implicit_reexport = true
packages = [
  "tests",
  "music_assistant",
]
show_error_codes = true
strict_equality = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff.format]
# Force Linux/macOS line endings
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "--cov music_assistant"
asyncio_mode = "auto"
filterwarnings = [
  # Suppress Python 3.13 AsyncMock internal warnings about unawaited coroutines
  "ignore:coroutine.*was never awaited:RuntimeWarning",
]

[tool.ruff.lint]
ignore = [
  "ANN002", # Just annoying, not really useful
  "ANN003", # Just annoying, not really useful
  "ANN401", # Opinioated warning on disallowing dynamically typed expressions
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "D417", # False positives in some occasions
  "EM101", # Just annoying, not really useful
  "EM102", # Just annoying, not really useful
  "FIX002", # Just annoying, not really useful
  "PLR2004", # Just annoying, not really useful
  "PGH004", # Just annoying, not really useful
  "PD011", # Just annoying, not really useful
  "S101", # assert is often used to satisfy type checking
  "TC001", # Just annoying, not really useful
  "TC003", # Just annoying, not really useful
  "TD002", # Just annoying, not really useful
  "TD003", # Just annoying, not really useful
  "TD004", # Just annoying, not really useful
  "TRY003", # Just annoying, not really useful
  "TRY400", # Just annoying, not really useful
  "COM812", # Conflicts with the Ruff formatter
  # TEMPORARY DISABLED rules  # The below rules must be enabled later one-by-one !
  "BLE001",
  "FBT001",
  "FBT002",
  "FBT003",
  "ANN001",
  "ANN201",
  "ANN202",
  "TRY002",
  "PTH103",
  "PTH100",
  "PTH110",
  "PTH111",
  "PTH112",
  "PTH113",
  "PTH118",
  "PTH120",
  "PTH123",
  "PYI034",
  "G004",
  "PGH003",
  "DTZ005",
  "S104",
  "S105",
  "S106",
  "SLF001",
  "SIM102",
  "PERF401",
  "PERF402",
  "ARG002",
  "S311",
  "TRY301",
  "RET505",
  "PLR0912",
  "B904",
  "TRY401",
  "S324",
  "DTZ006",
  "ERA001",
  "PTH206",
  "C901",
  "PTH119",
  "PTH116",
  "RUF012",
  "S304",
  "RET507",
  "RUF006",
  "TRY300",
  "PTH107",
  "S608",
  "N818",
  "S307",
  "B007",
  "ANN204",
  "PTH202",
  "ASYNC109",
  "ASYNC110",
]

select = ["ALL"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["music_assistant"]

[tool.ruff.lint.mccabe]
max-complexity = 25
